update in docker file